--- a/AnalisisSegurosAutos.ipynb
+++ b/AnalisisSegurosAutos.ipynb
@@ -4,25 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Datos"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Id = ID único para el cliente\n",
-    "Gender = Género del cliente\n",
-    "Age = Edad del cliente\n",
-    "Driving_License de conducir = 0: el cliente no tiene licencia, 1: el cliente ya tiene licencia\n",
-    "Region_Code = Código único para la región del cliente.\n",
-    "Previously_Insured = 1: el cliente ya tiene seguro de vehículo, 0: el cliente no tiene seguro de vehículo\n",
-    "Vehicle_Age = Antigüedad del vehículo\n",
-    "Vehicle_Damage = 1: El cliente sufrió daños en su vehículo en el pasado. 0: El cliente no ha dañado su vehículo en el pasado.\n",
-    "Annual_Premium = La cantidad que el cliente debe pagar como prima en el año.\n",
-    "Policy_Sales_Channel = Código anónimo para el canal de acercamiento al cliente, es decir. Diferentes agentes, por correo, por teléfono, en persona, etc.\n",
-    "Vintage = Número de días que el cliente ha estado asociado con la empresa\n",
-    "Response = 1: el cliente está interesado, 0: el cliente no está interesado"
+    "## Datos\n",
+    "+ Id = ID único para el cliente\n",
+    "+ Gender = Género del cliente\n",
+    "+ Age = Edad del cliente\n",
+    "+ Driving_License de conducir = 0: el cliente no tiene licencia, 1: el cliente ya tiene licencia\n",
+    "+ Region_Code = Código único para la región del cliente.\n",
+    "+ Previously_Insured = 1: el cliente ya tiene seguro de vehículo, 0: el cliente no tiene seguro de vehículo\n",
+    "+ Vehicle_Age = Antigüedad del vehículo\n",
+    "+ Vehicle_Damage = 1: El cliente sufrió daños en su vehículo en el pasado. 0: El cliente no ha dañado su vehículo en el pasado.\n",
+    "+ Annual_Premium = La cantidad que el cliente debe pagar como prima en el año.\n",
+    "+ Policy_Sales_Channel = Código anónimo para el canal de acercamiento al cliente, es decir. Diferentes agentes, por correo, por teléfono, en persona, etc.\n",
+    "+ Vintage = Número de días que el cliente ha estado asociado con la empresa\n",
+    "+ Response = 1: el cliente está interesado, 0: el cliente no está interesado\n"
    ]
   },
   {
